--- a/tigamap/templates/tigamap/validated_report_map_filters.html
+++ b/tigamap/templates/tigamap/validated_report_map_filters.html
@@ -380,6 +380,7 @@
         });
 
 
+        var blue_icon = new BlueIcon();
         var yellow_red_icon = new YellowRedIcon();
         var yellow_orange_icon = new YellowOrangeIcon();
         var yellow_white_icon = new YellowWhiteIcon();
