--- a/tigamap/templates/tigamap/validated_report_map_filters.html
+++ b/tigamap/templates/tigamap/validated_report_map_filters.html
@@ -491,14 +491,14 @@
             function apply_filter() {
 
                 markers_clustered.clearLayers();
-                if(selected_type == 'site'){
+               // if(selected_type == 'site'){
 
-                    $(".marker-cluster-small .marker-cluster-medium .marker-cluster-large").addClass('blue');
+           //         $(".marker-cluster-small .marker-cluster-medium .marker-cluster-large").addClass('blue');
 
-                }else{
+             //   }else{
              //       $(".marker-cluster-small .marker-cluster-medium .marker-cluster-large").removeClass('blue');
 
-                }
+               // }
                 add_to_layer(full_data, markers_clustered, true);
             }
 
