--- a/tigamap/templates/tigamap/validated_report_map_filters.html
+++ b/tigamap/templates/tigamap/validated_report_map_filters.html
@@ -332,8 +332,8 @@
     {% endblock %}
 
     {% block leaflet_marker_clusters %}
-        {% leaflet_js plugins="marker_cluster_blue_yellow" %}
-        {% leaflet_css plugins="marker_cluster_blue_yellow" %}
+        {% leaflet_js plugins="marker_cluster_yellow" %}
+        {% leaflet_css plugins="marker_cluster_yellow" %}
     {% endblock %}
 
 
@@ -410,7 +410,7 @@
                 } else {
                     return yellow_white_icon;
                 }
-            
+
         }
 
         function get_color_class(score) {
