--- a/tigamap/templates/tigamap/validated_report_map_filters.html
+++ b/tigamap/templates/tigamap/validated_report_map_filters.html
@@ -350,7 +350,7 @@
 
         var markers_clustered = new L.MarkerClusterGroup();
 
-        var BlueIcon = L.Icon.Default;
+   //     var BlueIcon = L.Icon.Default;
 
 
         var YellowRedIcon = L.Icon.Default.extend({
@@ -380,7 +380,7 @@
         });
 
 
-        var blue_icon = new BlueIcon();
+     //   var blue_icon = new BlueIcon();
         var yellow_red_icon = new YellowRedIcon();
         var yellow_orange_icon = new YellowOrangeIcon();
         var yellow_white_icon = new YellowWhiteIcon();
