--- a/tigamap/static/tigamap/MarkerCluster.tigamap_blue_yellow.css
+++ b/tigamap/static/tigamap/MarkerCluster.tigamap_blue_yellow.css
@@ -42,6 +42,51 @@
 }
 
 
+
+.marker-cluster-small.blue {
+	background-color: rgba(0, 200, 255, 0.8);
+	}
+.marker-cluster-small.blue div {
+	background-color: rgba(0, 200, 255, 0.8);
+	}
+
+.marker-cluster-medium.blue {
+	background-color: rgba(76, 156, 209, 0.8);
+	}
+.marker-cluster-medium.blue div {
+	background-color: rgba(76, 156, 209, 0.8);
+	}
+
+.marker-cluster-large.blue {
+	background-color: rgba(18, 111, 198, 0.8);
+	}
+.marker-cluster-large.blue div {
+	background-color: rgba(18, 111, 198, 0.8);
+	}
+
+	/* IE 6-8 fallback colors */
+.leaflet-oldie.blue .marker-cluster-small.blue {
+	background-color: rgba(0, 200, 255);
+	}
+.leaflet-oldie.blue .marker-cluster-small.blue div {
+	background-color: rgba(0, 200, 255);
+	}
+
+.leaflet-oldie.blue .marker-cluster-medium.blue{
+	background-color: rgba(76, 156, 209);
+	}
+.leaflet-oldie.blue .marker-cluster-medium.blue div {
+	background-color: rgba(76, 156, 209);
+	}
+
+.leaflet-oldie.blue .marker-cluster-large.blue {
+	background-color: rgba(18, 111, 198);
+	}
+.leaflet-oldie.blue .marker-cluster-large.blue div {
+	background-color: rgba(18, 111, 198);
+}
+
+
 .marker-cluster {
 	background-clip: padding-box;
 	border-radius: 20px;
