--- a/tigamap/templates/tigamap/validated_report_map_filters.html
+++ b/tigamap/templates/tigamap/validated_report_map_filters.html
@@ -332,8 +332,8 @@
     {% endblock %}
 
     {% block leaflet_marker_clusters %}
-        {% leaflet_js plugins="marker_cluster_yellow" %}
-        {% leaflet_css plugins="marker_cluster_yellow" %}
+        {% leaflet_js plugins="marker_cluster_blue_yellow" %}
+        {% leaflet_css plugins="marker_cluster_blue_yellow" %}
     {% endblock %}
 
 
@@ -350,7 +350,7 @@
 
         var markers_clustered = new L.MarkerClusterGroup();
 
-   //     var BlueIcon = L.Icon.Default;
+       var BlueIcon = L.Icon.Default;
 
 
         var YellowRedIcon = L.Icon.Default.extend({
@@ -380,7 +380,7 @@
         });
 
 
-     //   var blue_icon = new BlueIcon();
+       var blue_icon = new BlueIcon();
         var yellow_red_icon = new YellowRedIcon();
         var yellow_orange_icon = new YellowOrangeIcon();
         var yellow_white_icon = new YellowWhiteIcon();
@@ -401,11 +401,10 @@
             }
         }
 
-        function get_icon(movelab_annotation) {
+        function get_icon(report) {
 
-
-                if (movelab_annotation != null) {
-                    var score = movelab_annotation.tiger_certainty_category;
+            if(report.movelab_annotation !=null){
+                    var score = report.movelab_annotation.tiger_certainty_category;
                     return score == 2 ? yellow_red_icon : (score == 1 ? yellow_orange_icon : (score == -1 ? yellow_grey_icon : (score == -2 ? yellow_black_icon : yellow_white_icon)));
                 } else {
                     return yellow_white_icon;
@@ -465,10 +464,14 @@
         }
 
         function make_popup_text(value) {
+            if(value.type == 'adult'){
             if (value.movelab_annotation != null) {
                 return '<table class="popup-table">' + make_experts_row(value.movelab_annotation.tiger_certainty_category) + make_crowd_row(value.movelab_annotation.crowdcrafting_score_cat, value.movelab_annotation.crowdcrafting_n_response) + make_user_response_row(value.tigaprob_cat, value.tiger_responses) + make_photo_row(value.movelab_annotation.photo_html) + make_user_note_row(value.movelab_annotation.edited_user_notes) + '</table>';
             } else {
                 return '<table class="popup-table">' + make_user_response_row(value.tigaprob_cat, value.tiger_responses) + '</table>';
+            }
+            } else{
+                return '';
             }
         }
 
