zoom control back in map

--- a/tigamap/templates/tigamap/app_filtered.html
+++ b/tigamap/templates/tigamap/app_filtered.html
@@ -359,7 +359,7 @@
                                     180]
                             ], "resetview": true, "srid": null, "fitextent": true},
                         options = {djoptions: djoptions, initfunc: loadmap,
-                            globals: false, callback: window.map_init_basic, zoomControl: false};
+                            globals: false, callback: window.map_init_basic, zoomControl: true};
                 L.Map.djangoMap('tigamap', options);
             }
 
