--- a/tigamap/templates/tigamap/app_filtered.html
+++ b/tigamap/templates/tigamap/app_filtered.html
@@ -258,7 +258,7 @@
                                     </select>
                                 </div>
                             </div>
-                                                        <div class="form-group">
+                            <div class="form-group">
                                 <label for="month_select" class="col-sm-4 control-label">Month:</label>
 
                                 <div class="col-sm-8">
@@ -272,10 +272,13 @@
                                         <option value="6" data-subtext="Only reports made in June">June</option>
                                         <option value="7" data-subtext="Only reports made in July">July</option>
                                         <option value="8" data-subtext="Only reports made in August">August</option>
-                                        <option value="9" data-subtext="Only reports made in September">September</option>
+                                        <option value="9" data-subtext="Only reports made in September">September
+                                        </option>
                                         <option value="10" data-subtext="Only reports made in October">October</option>
-                                        <option value="11" data-subtext="Only reports made in November">November</option>
-                                        <option value="12" data-subtext="Only reports made in December">December</option>
+                                        <option value="11" data-subtext="Only reports made in November">November
+                                        </option>
+                                        <option value="12" data-subtext="Only reports made in December">December
+                                        </option>
                                     </select>
                                 </div>
                             </div>
@@ -301,7 +304,8 @@
                                         <option value="2" data-subtext="Only highly probably reports">Strong Validation
                                         </option>
                                         <option value="1"
-                                                data-subtext="Only probably and highly probably reports">Medium Validation
+                                                data-subtext="Only probably and highly probably reports">Medium
+                                            Validation
                                         </option>
                                         <option value="-2" data-subtext="No validation filter">All Reports</option>
                                     </select>
