--- a/tigamap/templates/tigamap/validated_report_map_filters.html
+++ b/tigamap/templates/tigamap/validated_report_map_filters.html
@@ -546,6 +546,8 @@
         }
 
 
+
+
         function map_init_basic(map, options) {
 
             map.on('zoomend', function (e) {
@@ -558,7 +560,12 @@
             progress_bar = $("#progress_bar");
             progress_bar_container = $("#progress_bar_container");
 
+            markers_clustered.addLayer(L.marker([0, 0], {icon: get_icon(value)}));
+
             markers_clustered.addTo(map);
+
+                        markers_clustered.addLayer(L.marker([10, 10], {icon: get_icon(value)}));
+
 
             for (var d = {{ end_day }}; d >= 0; d--) {
                 get_data(d, map);
