--- a/tigamap/templates/tigamap/validated_report_map_filters.html
+++ b/tigamap/templates/tigamap/validated_report_map_filters.html
@@ -560,11 +560,11 @@
             progress_bar = $("#progress_bar");
             progress_bar_container = $("#progress_bar_container");
 
-            markers_clustered.addLayer(L.marker([0, 0], {icon: get_icon(value)}));
+            markers_clustered.addLayer(L.marker([0, 0]));
 
             markers_clustered.addTo(map);
 
-                        markers_clustered.addLayer(L.marker([10, 10], {icon: get_icon(value)}));
+                        markers_clustered.addLayer(L.marker([10, 10]));
 
 
             for (var d = {{ end_day }}; d >= 0; d--) {
