--- a/tigamap/templates/tigamap/validated_report_map_filterable.html
+++ b/tigamap/templates/tigamap/validated_report_map_filterable.html
@@ -266,15 +266,15 @@ function add_to_layer(data, this_layer, filter) {
     $.each(data, function (index, value) {
         if (value != null && value.lat != null && value.lon != null && value.type != null && value.type == selected_type && (!filter ||
                 ( (selected_year == 0 || value.creation_year == selected_year) && (selected_month == 0 || value.creation_month == selected_month) && (selected_validation == -2 || value.movelab_annotation.tiger_certainty_category >= selected_validation)))) {
-            this_layer.addLayer(L.marker([value.lat, value.lon], {icon: get_icon(value)})).bindPopup(make_popup_text(value), popup_options);
+            this_layer.addLayer(L.marker([value.lat, value.lon], {icon: get_icon(value)}).bindPopup(make_popup_text(value), popup_options));
         }
     });
 }
 
 
 function apply_filter() {
-
     markers_clustered.clearLayers();
+    add_to_layer(full_data, markers_clustered, true);
     if (selected_type == 'site') {
 
         $(".legend").hide();
@@ -285,7 +285,6 @@ function apply_filter() {
         $(".marker-cluster").removeClass('blue');
 
     }
-    add_to_layer(full_data, markers_clustered, true);
 }
 
 
