--- a/tigamap/templates/tigamap/validated_report_map_filterable.html
+++ b/tigamap/templates/tigamap/validated_report_map_filterable.html
@@ -19,10 +19,10 @@
 <script src="{% static "tigamap/jquery-1.11.1.min.js" %}"></script>
 <script src="{% static "tigamap/jquery.cookie.js" %}"></script>
 
-{% leaflet_js plugins="marker_cluster_blue_yellow" %}
-{% leaflet_css plugins="marker_cluster_blue_yellow" %}
+{% leaflet_js plugins="marker_cluster_yellow_single" %}
+{% leaflet_css plugins="marker_cluster_yellow_single" %}
 
-<link id="cluster_color_css" rel="stylesheet" href={% static "tigamap/MarkerCluster.tigamap_yellow.css" %}>
+<link id="cluster_color_css" rel="stylesheet" href={% static "tigamap/MarkerCluster.tigamap_yellow_single.css" %}>
 
 <link rel="stylesheet" href={% static "tigamap/base_style.css" %}>
 <link rel="stylesheet" href={% static "tigamap/map_app_style.css" %}>
@@ -307,7 +307,7 @@ function apply_filter() {
     } else {
         $(".legend").show();
     //    $(".marker-cluster").removeClass('blue');
-        $("#cluster_color_css").attr({href : "/static/tigamap/MarkerCluster.tigamap_yellow.css"});
+        $("#cluster_color_css").attr({href : "/static/tigamap/MarkerCluster.tigamap_yellow_single.css"});
 
     }
 }
