filters in nav minor edits

--- a/tigamap/templates/tigamap/validated_report_map_filterable.html
+++ b/tigamap/templates/tigamap/validated_report_map_filterable.html
@@ -401,10 +401,10 @@ function map_init_basic(map, options) {
                         <li>
                          <form class="navbar-form" role="search">
                     <div class="form-group">
-                            <select id="year_select_nav" class="selectpicker show-tick">
-                                <option value="2015" data-subtext="Only reports made in 2015">2015</option>
-                                <option value="2014" data-subtext="Only reports made in 2014">2014</option>
-                                <option value="0" data-subtext="All reports">All</option>
+                            <select id="year_select_nav" class="selectpicker show-tick" data-style="btn-primary">
+                                <option value="2015">2015</option>
+                                <option value="2014">2014</option>
+                                <option value="0">All years</option>
                             </select>
                         </div>
                              </form>
